[package]
name = "Chess"
version = "0.1.0"
edition = "2021"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.14.2" }
bevy_mod_picking = "0.20.1"
#log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
lto = "thin"
